ADD API PUT: /session, UPDATE Readme.md
